syntax = "proto3";

package prisel;
option csharp_namespace = "Prisel.Protobuf";

import "prisel/room_info.proto";
import "prisel/room_state_snapshot.proto";

// type : JOIN,
// packet_type : REQUEST
message JoinRequest {
  oneof room {
    string roomId = 1;
    bool defaultRoom = 2;
  }
}

// type : JOIN,
// packet_type : RESPONSE
message JoinResponse {
  RoomInfo room = 1;
  RoomStateSnapshot roomState = 2;
}